# docker-unifi-led-light-switch

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  release.yml
scripts/: init.sh  install-supercronic.sh  unifi-led-switch.sh
src/unifi_led_switch/: cli.py  unifi.py
